- minor refactorings in both implementation and tests